Deploy changes up to b9e8ab76aeb047aee85ef369e768eec255bae9a4

--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        document.querySelector('form').addEventListener('submit', e => {
+          e.preventDefault();
+          const formData = new FormData(e.target);
+          const word = formData.get('word');
+          const shuffledWord = _.shuffle(word.split('')).join('');
+          document.getElementById('jumbled').appendChild(document.createTextNode(shuffledWord));
+        });
+      });
+    </script>
+  </head>
   <body>
     <h1>Anagram Manager</h1>
+    <form>
+      <label>What's the word?<input name="word"></label>
+      <button>Jumble!</button>
+    </form>
+    <div id="jumbled"></div>
   </body>
 </html>
