--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="styles.css"></link>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', () => {
@@ -16,6 +17,7 @@
   </head>
   <body>
     <h1>Anagram Manager</h1>
+    <hr/>
     <form>
       <label>What's the word?<input name="word"></label>
       <button>Jumble!</button>
