--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Anagram Manager</h1>
     <hr/>
     <form>
-      <label>What's the word?<input name="word" autocomplete="off"></label>
+      <label>What's the word?<input name="word" required autocomplete="off"></label>
       <button>Jumble!</button>
     </form>
     <div id="jumbled"></div>
