Add title to website

--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Anagram Manager</title>
     <link rel="stylesheet" type="text/css" href="styles.css"></link>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
     <script src="index.js"></script>
